[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/level3/Level3.gd" type="Script" id=2]
[ext_resource path="res://levels/textures/background1.png" type="Texture" id=3]

[node name="Level3" type="Node2D" groups=["levels"]]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 180, 320 )
scale = Vector2( 4, 4 )
z_index = -1000
texture = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Timers" type="Node" parent="."]

[node name="Level3Timer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="AsteroidTopTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="AsteroidRLTimer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[node name="Enemy1Timer" type="Timer" parent="Timers"]
process_mode = 0
one_shot = true

[connection signal="timeout" from="Timers/Level3Timer" to="." method="_on_Level3Timer_timeout"]
[connection signal="timeout" from="Timers/AsteroidTopTimer" to="." method="_on_AsteroidTopTimer_timeout"]
[connection signal="timeout" from="Timers/AsteroidRLTimer" to="." method="_on_AsteroidRLTimer_timeout"]
[connection signal="timeout" from="Timers/Enemy1Timer" to="." method="_on_Enemy1Timer_timeout"]
